--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@ p.groove {border-style: groove;}
   <div class="dropdown-content">
     <a href="https://meet.google.com/vqc-jycz-gzh">PCOM</a>
     <a href="https://meet.google.com/fzp-tnth-eck">EM3</a>
-    <a href="https://meet.google.com/ccz-dwoo-qhc">DSA</a>
     <a href="https://meet.google.com/mgk-suvw-exh">PCPF</a>
+    <a href="https://meet.google.com/ccz-dwoo-qhc">DSA</a>
   </div>
 </div>
 <div class="dropdown" style="float:right;">
@@ -109,10 +109,10 @@ p.groove {border-style: groove;}
 <div class="dropdown-content">
   <a href="https://meet.google.com/vqc-jycz-gzh">PCOM</a>
   <a href="https://meet.google.com/fzp-tnth-eck">EM3</a>
-  <a href="https://meet.google.com/fxc-hbxw-wye">B1</a>
-  <a href="https://meet.google.com/tuh-xgvy-yps">B2</a>
-  <a href="https://meet.google.com/som-thqc-enh">B3</a>
-  <a href="https://meet.google.com/som-thqc-enh">B4</a>
+  <a href="https://meet.google.com/fxc-hbxw-wye">JAVA-B1</a>
+  <a href="https://meet.google.com/tuh-xgvy-yps">CPPL-B2</a>
+  <a href="https://meet.google.com/som-thqc-enh">JAVA-B3</a>
+  <a href="https://meet.google.com/qan-phsi-auu">SQL-B4</a>
 </div>
 </div>
 <div class="dropdown" style="float:right;">
