UPLOADED LECTURE FILE

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@ p.groove {border-style: groove;}
 <div class="dropdown">
   <button class="dropbtn">MONDAY</button>
   <div class="dropdown-content">
-    <a href="https://meet.google.com/ccz-dwoo-qhc">DSA</a>
-    <a href="https://meet.google.com/mgk-suvw-exh">PCPF</a>
+    <a href="https://meet.google.com/fzp-tnth-eck">EM3</a>
     <a href="https://meet.google.com/qan-phsi-auu">DBMS</a>
-    <a href="https://meet.google.com/fxc-hbxw-wye">JAVA TUT</a>
+    <a href="https://meet.google.com/ccz-dwoo-qhc">DSA</a>
+    <a href="https://meet.google.com/som-thqc-enh">JAVA TUT</a>
   </div>
 </div>
 <div class="dropdown" style="float:right;">
@@ -88,8 +88,8 @@ p.groove {border-style: groove;}
   <div class="dropdown-content">
     <a href="https://meet.google.com/vqc-jycz-gzh">PCOM</a>
     <a href="https://meet.google.com/fzp-tnth-eck">EM3</a>
-    <a href="https://meet.google.com/mgk-suvw-exh">PCPF</a>
     <a href="https://meet.google.com/ccz-dwoo-qhc">DSA</a>
+        <a href="https://meet.google.com/dzi-exrg-ohe">EM TUT</a>
   </div>
 </div>
 <div class="dropdown" style="float:right;">
@@ -108,9 +108,9 @@ p.groove {border-style: groove;}
 <button class="dropbtn">WEDNESDAY</button>
 <div class="dropdown-content">
   <a href="https://meet.google.com/vqc-jycz-gzh">PCOM</a>
-  <a href="https://meet.google.com/fzp-tnth-eck">EM3</a>
+  <a href="https://meet.google.com/mgk-suvw-exh">PCPF</a>
   <a href="https://meet.google.com/fxc-hbxw-wye">JAVA-B1</a>
-  <a href="https://meet.google.com/ood-yixp-tnp">CPPL-B2</a>
+  <a href="https://meet.google.com/ccz-dwoo-qhc">DSLAB-B2</a>
   <a href="https://meet.google.com/som-thqc-enh">JAVA-B3</a>
   <a href="https://meet.google.com/qan-phsi-auu">SQL-B4</a>
 </div>
@@ -119,7 +119,7 @@ p.groove {border-style: groove;}
   <button class="dropbtn">PRACTICAL WEDNESDAY</button>
   <div class="dropdown-content">
     <a href="https://meet.google.com/wqe-vtfo-xmy">B1-CPPL</a>
-    <a href="https://meet.google.com/ccz-dwoo-qhc">B2-DSA</a>
+    <a href=" https://meet.google.com/ood-yixp-tnp">B2-CPPL</a>
     <a href="https://meet.google.com/qan-phsi-auu">B3-SQL</a>
     <a href="https://meet.google.com/som-thqc-enh">B4-JAVA</a>
   </div>
@@ -133,7 +133,7 @@ p.groove {border-style: groove;}
     <a href="https://meet.google.com/fzp-tnth-eck">EM3</a>
     <a href="https://meet.google.com/vqc-jycz-gzh">PCOM</a>
 <a href="https://meet.google.com/qan-phsi-auu">DBMS</a>
-    <a href="https://meet.google.com/dzi-exrg-ohe">EM TUT</a>
+  <a href="https://meet.google.com/mgk-suvw-exh">PCPF</a>
   </div>
 </div>
 <div class="dropdown" style="float:right;">
@@ -151,10 +151,11 @@ p.groove {border-style: groove;}
 <div class="dropdown">
   <button class="dropbtn">FRIDAY</button>
   <div class="dropdown-content">
-<a href="https://meet.google.com/ccz-dwoo-qhc">DSA</a>
-<a href="https://meet.google.com/mgk-suvw-exh">PCPF</a>
-<a href="https://meet.google.com/qan-phsi-auu">DBMS</a> 
+
 <a href="https://meet.google.com/fxc-hbxw-wye">JAVA TUT</a>
+<a href="https://meet.google.com/mgk-suvw-exh">PCPF</a>
+<a href="https://meet.google.com/qan-phsi-auu">DBMS</a>
+<a href="https://meet.google.com/ccz-dwoo-qhc">DSA</a>
   </div>
 </div>
 <div class="dropdown" style="float:right;">
