Updated lecture links

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ p.groove {border-style: groove;}
   <button class="dropbtn">MONDAY</button>
   <div class="dropdown-content">
     <a href="https://meet.google.com/fzp-tnth-eck">EM3</a>
-    <a href="https://meet.google.com/qan-phsi-auu">DBMS</a>
+    <a href="https://meet.google.com/vqc-jycz-gzh">PCOM</a>
     <a href="https://meet.google.com/ccz-dwoo-qhc">DSA</a>
     <a href="https://meet.google.com/som-thqc-enh">JAVA TUT</a>
   </div>
@@ -74,10 +74,10 @@ p.groove {border-style: groove;}
 <div class="dropdown" style="float:right;">
   <button class="dropbtn">PRACTICAL MONDAY</button>
   <div class="dropdown-content">
-    <a href="https://meet.google.com/qan-phsi-auu">B1-SQL</a>
-    <a href="https://meet.google.com/fxc-hbxw-wye">B2-JAVA</a>
-    <a href="https://meet.google.com/ccz-dwoo-qhc">B3-DSALAB</a>
-    <a href="https://meet.google.com/jaq-bcdv-acs">B4-MPL</a>
+    <a href="https://meet.google.com/ccz-dwoo-qhc">B1-DSLAB</a>
+    <a href="https://meet.google.com/fxc-hbxw-wye">B2-MPL</a>
+    <a href="https://meet.google.com/som-thqc-enh">B3-JAVA LAB</a>
+    <a href="https://meet.google.com/fto-ebkz-mtw">B4-CPPL</a>
   </div>
 </div>
 <hr>
@@ -86,8 +86,8 @@ p.groove {border-style: groove;}
   <div class="dropdown">
   <button class="dropbtn">TUESDAY</button>
   <div class="dropdown-content">
-    <a href="https://meet.google.com/vqc-jycz-gzh">PCOM</a>
-    <a href="https://meet.google.com/fzp-tnth-eck">EM3</a>
+    <a href="https://meet.google.com/qan-phsi-auu">DBMS</a>
+    <a href="https://meet.google.com/mgk-suvw-exh">PCPF</a>
     <a href="https://meet.google.com/ccz-dwoo-qhc">DSA</a>
         <a href="https://meet.google.com/dzi-exrg-ohe">EM TUT</a>
   </div>
@@ -108,7 +108,7 @@ p.groove {border-style: groove;}
 <button class="dropbtn">WEDNESDAY</button>
 <div class="dropdown-content">
   <a href="https://meet.google.com/vqc-jycz-gzh">PCOM</a>
-  <a href="https://meet.google.com/mgk-suvw-exh">PCPF</a>
+  <a href="https://meet.google.com/fzp-tnth-eck">EM3</a>
   <a href="https://meet.google.com/fxc-hbxw-wye">JAVA-B1</a>
   <a href="https://meet.google.com/ccz-dwoo-qhc">DSLAB-B2</a>
   <a href="https://meet.google.com/som-thqc-enh">JAVA-B3</a>
@@ -139,10 +139,10 @@ p.groove {border-style: groove;}
 <div class="dropdown" style="float:right;">
   <button class="dropbtn">PRACTICALTHRUSDAY</button>
   <div class="dropdown-content">
-    <a href="https://meet.google.com/ccz-dwoo-qhc">B1-DSA</a>
-    <a href="https://meet.google.com/fxc-hbxw-wye">B2-MPL</a>
-    <a href="https://meet.google.com/som-thqc-enh">B3-JAVA</a>
-    <a href="https://meet.google.com/fto-ebkz-mtw">B4-CPPL</a>
+    <a href="https://meet.google.com/qan-phsi-auu">B1-SQL</a>
+    <a href="https://meet.google.com/fxc-hbxw-wye">B2-JAVA LAB</a>
+    <a href="https://meet.google.com/ccz-dwoo-qhc">B3-DSALAB</a>
+    <a href="https://meet.google.com/jaq-bcdv-acs">B4-MPL</a>
   </div>
 </div>
 <hr>
